Syntax error fixing, alignment adjustments

--- a/Nooch/default.css
+++ b/Nooch/default.css
@@ -78,8 +78,6 @@
 			left			: 0px;
 		}
         #navbar_hamburger {
-            left            : 0px;
-			top				: 0px;
 			width       :  30px;
             height      : 30px;
 			font-family : "FontAwesome";
@@ -163,7 +161,7 @@
 			border-radius		: 5px;
 			font-family			: "Roboto";
 			font-weight         : light;
-			font-size			: 18px;
+			font-size			: 14px;
             background-image	: linear-gradient(#7fd034, #6ab029);
 			border				: 1px solid #66AE3C;
 		}
